--- a/sports-talent-hunt/package.json
+++ b/sports-talent-hunt/package.json
@@ -10,35 +10,41 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~6.1.1",
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.0",
-    "expo": "~50.0.0",
+    "expo": "~51.0.0",
     "expo-av": "~13.10.4",
     "expo-camera": "~14.1.3",
     "expo-image": "~1.10.6",
     "expo-image-picker": "~14.7.1",
     "expo-linear-gradient": "~12.7.2",
-    "expo-splash-screen": "~0.26.4",
+    "expo-splash-screen": "^31.0.9",
     "expo-sqlite": "~13.4.0",
     "expo-status-bar": "~1.11.1",
     "lottie-react-native": "6.5.1",
     "nativewind": "^2.0.11",
-    "react": "18.2.0",
-    "react-native": "0.73.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-native": "^0.74.7",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-redux": "^8.1.3"
+    "react-native-web": "^0.19.13",
+    "react-redux": "^8.1.3",
+    "expo-font": "~12.0.10",
+    "expo-modules-core": "~1.12.26"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "jest": "^29.2.1",
+    "metro": "^0.80.6",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "3.3.2"
   },
